# SVDAG-Compression

./: .gitignore  CMakeLists.txt  pseudocode.txt  readme.md  readme.txt
build_bak/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake_modules/: FindGLEW.cmake  FindGLFW.cmake  FindSL.cmake
include/: CImg.h
scripts/: Cluster analysis.ipynb  cluster-analysis.py  lossy-compression-stats.py  louvain.py  mcl.py
scripts/.ipynb_checkpoints/: Cluster analysis-checkpoint.ipynb
scripts/floodfill-test/: graph-renderer.ts  index.html  main.js  main.js.map  main.ts  package.json  tsconfig.json
shaders/: octree_dda.frag.glsl
src/svbuilder/: main.cpp
src/svviewer/: camera.cpp  camera.hpp  font.hpp  glslprogram.cpp  glslprogram.hpp  halton.cpp  halton.hpp  main.cpp  octree_dda_renderer.cpp  octree_dda_renderer.hpp  renderer.hpp  renderer_monitor.cpp  renderer_monitor.hpp  screenquadrenderer.cpp  screenquadrenderer.hpp
src/symvox/: cluster.cpp  cluster.hpp  encoded_1lsvdag.cpp  encoded_1lsvdag.hpp  encoded_octree.hpp  encoded_ssvdag.cpp  encoded_ssvdag.hpp  encoded_svdag.cpp  encoded_svdag.hpp  encoded_svo.cpp  encoded_svo.hpp  encoded_ussvdag.cpp  encoded_ussvdag.hpp  geom_octree.cpp  geom_octree.hpp  geom_octree_extension.cpp  octree.cpp  octree.hpp  octree_node.cpp  octree_parser.cpp  scene.cpp  scene.hpp  test_triangle_box.cpp  test_triangle_box.hpp  util.hpp
